--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "@repo/prisma",
+  "name": "@repo/db",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "exports": {
+    "./client": "./src/index.ts"
   },
   "keywords": [],
   "author": "",
+  "devDependencies": {
+    "@repo/typescript-config": "workspace:*"
+  },
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^6.3.0",
+    "@prisma/client": "6.3.0",
     "prisma": "^6.3.0"
   }
 }
