--- a/apps/ws-server/package.json
+++ b/apps/ws-server/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "devDependencies": {
+    "@repo/db": "workspace:*",
+    "@repo/typescript-config": "workspace:*"
+  },
   "dependencies": {
     "@types/ws": "^8.5.14",
     "ws": "^8.18.0"
